themes/solidaritynz/assets/css/main.css
:root {
	--red: rgba(192, 57, 43, 1);
	--red-light: rgba(192, 57, 43, 0.1);
	--radius: 1rem;
}

body {
  color: #222;
  font-size: 18px;
  line-height: 1.5;
  max-width: 1200px;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  margin: 0 auto;
	font-family: Charter, 'Bitstream Charter', 'Sitka Text', Cambria, serif;
  font-weight: normal;
  padding: 1rem 0.5rem;
  box-sizing: border-box;
}

h1, h2, h3, h4, h5, h6 {
	font-family: Seravek, 'Gill Sans Nova', Ubuntu, Calibri, 'DejaVu Sans', source-sans-pro, sans-serif;
font-weight: 900;
}

body > main {
	flex-grow: 1;
}

main { margin: 1rem auto; }

img {
	max-width: 100%;
}

body > header {
	border-bottom: 1px solid var(--red);
	padding-bottom: 1rem
}

body > footer {
	border-top: 1px solid var(--red);
	padding-top: 2rem;
	margin-top: 2rem;
}

a, a:visited, a:hover, a:active {
	color: var(--red);
	text-decoration: none;
}

a:hover {
	border-bottom: 2px solid var(--red);
}

a[title="Home"]:hover {
	border-bottom: none;
}

nav {
	display: flex;
	align-items: center;
	justify-content: flex-start;
}

nav img {
	max-width: 32px;
}

nav h1 {
	flex-grow: 1;
	margin: 0 1rem;
}

.grey-bubble {
	background-color: #ecf0f1;
	padding: 0.5rem 1rem;
	margin: 1rem auto;
	border-radius: var(--radius);
}

.read-more {
/* 	margin: auto 0 auto auto; */
	text-align: right;
/* 	display: inline-block; */
}

.read-more a {
color: white;
font-weight: 700;
background-color: var(--red);
}

header h1+p,
header h2+p {
	margin-top: -1.5rem;
	margin-bottom: 0;
	font-style: italic;
	font-size: smaller;
}

main article:not(:last-of-type) main {
	border-bottom: 1px solid lightgrey;
}

article footer {
	border-top: 1px solid lightgray;
	margin-top: 2rem;
}

aside ul {
	margin-top: 0;
}

footer details { margin-top: 1rem; }
details h2 { display: inline-block; margin: 0 1rem; }
details summary { cursor: pointer; }

.author-description {
  position:relative;
  padding: 0 1rem;
  margin: 2rem 1rem 0rem 1rem;
  border:5px solid var(--red);
  background:#fff;
  border-radius: var(--radius);
}

.author-description:before {
  content:"";
  position:absolute;
  border-style:solid;
  border-color:var(--red) transparent;
  display:block;
  width:0;
  top:-20px;
  bottom:auto;
  left: 40px;
  right: auto;
  border-width:0 20px 20px;
}

/* creates the smaller  triangle */
.author-description:after {
  content:"";
  position:absolute;
  border-style:solid;
  border-color:#fff transparent;
  display:block;
  width:0;
  top:-13px;
  bottom:auto;
  left: 47px;
  right: auto;
  border-width:0 13px 13px;
}

pre {
	background-color: #f8f8f2;
	color: #272822;
	white-space: break-spaces;
	padding: 0.5rem 1rem;
}

blockquote {
	padding: 0.5rem 1rem;
	margin: auto auto auto 0.5rem;
	border-left: 5px solid var(--red);
	background-color: var(--red-light);
}

.whakatauki {
	text-align: center;
}

.tag {
	background-color: var(--red-light);
	padding: 0.1rem 0.25rem;
	border-radius: 0.25rem;
	margin: 0.1rem auto;
	display: inline-block;
	border-bottom: 2px solid transparent;
}

/* MENU STYLES */
input[type=checkbox].toggle {
  width: 75px;
  height: 34px;
  z-index: 99999999;
}

input[type=checkbox].toggle,
.hamburger {
    position: absolute;
    right: 1rem;
    top: 1.2rem;
    margin: 0;
}

.hamburger {
    z-index: 9999999;
    display: flex;
    align-items: center;
    padding: 0.5rem;
    border-radius: 1rem;
    /*border: 1px solid lightgrey;*/
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    font-variant: small-caps;
}

.hamburger p {
  margin: -2px 0 0 0.25rem;
  line-height: 1;
  font-weight: 500;
}

.hamburger span {
    height: 2px;
    border-radius: 2px;
    background-color: rgb(51, 51, 51);
    margin-bottom: 2px;
    display: block;
    transition: all 150ms;
    width: 10px;
}

.hamburger span:last-child {
    margin-bottom: 0;
}

.toggle {
    z-index: 9999999;
    opacity: 0;
}

.toggle:hover {
    cursor: pointer;
}

.toggle ~ .nav-wrapper {
    transform: translateX(150%);
}

.toggle:checked ~ .nav-wrapper {
    transform: translateX(0);
}

.toggle:checked ~ .hamburger span {
    transition: all 150ms;
}

.toggle:checked ~ .hamburger span:nth-child(1) {
    transform: translateY(5px) rotateZ(45deg);
}

.toggle:checked ~ .hamburger span:nth-child(2) {
    transform: translateX(50%);
    opacity: 0;
}

.toggle:checked ~ .hamburger span:nth-child(3) {
    transform: translateY(-3px) rotateZ(-45deg)
}

.nav-wrapper {
  width: 100vw;
  position: absolute;
  left: 0;
  height: calc(100vh - 4.6rem);
  top: 4.6rem;
  transition: all 150ms;
  padding: 0.5rem;
  box-sizing: border-box;
  overflow-y: auto;
  text-align: left;
  background-color: white;
  z-index: 999999;
}

.nav-wrapper div {
  max-width:  600px;
}

.nav-wrapper ul {
  list-style: none;
}

menu {
	list-style: none;
	margin: 0;
	padding: 0;
	text-align: right;
	font-size: 2rem;
	font-weight: 600;
}

menu a {
	display: inline-block;
	padding: 0.5rem;
	border-bottom: 2px solid transparent;
}
/* END MENU STYLES */

@media (min-width: 850px) {
/* 	body {padding: 1rem 0;} */
	
	main > article {
		display: grid; 
		grid-template-columns: 1fr 0.5fr; 
		grid-template-rows: min-content 1fr min-content; 
		gap: 0em 5em; 
		width: 100%; 
		height: 100%; 
	}

	main > article > header { grid-area: 1 / 1 / 1 / 1; }
	main > article > main { grid-area: 2 / 1 / 2 / 1; min-width: 0; }
	main > article > aside { grid-area: 2 / 2 / 3 / 2; }
	main > article > footer { grid-area: 3 / 1 / 3 / 1; }
	
	.toggle ~ .nav-wrapper {
		transform: none;
	  }
	.mobile {display: none;}
	menu { font-size: 1.2rem; }
	menu li { display: inline; }
	.nav-wrapper {
		position: inherit;
		height: auto;
		padding: 0;
		background-color: transparent;
	}
}

